k8s/monitoring/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: go
spec:
  selector:
    app: go
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
